--- a/src/main/resources/templates/maisto_medz_grupe.html
+++ b/src/main/resources/templates/maisto_medz_grupe.html
@@ -148,6 +148,7 @@
 		$( "#create-product" ).button().on( "click", function() {
 		
 			$( '#pav_veiksmo' ).html ( 'Kuriamas naujas įrašas' );
+			$( '#veiksmas' ).val ( 'papildyti' );
 			dialog.dialog( "open" );
 		});
 		$( ".keisti" ).each ( function() {
@@ -157,7 +158,8 @@
 				id = $( this ).data( 'id' );
 				$( '#id_taisomo_iraso' ).val ( id );
 				$( '#pav_veiksmo' ).html (  'Koreguojamas įrašas' );
-				$('#pav').val( $( this ).data ( 'pav' ));			
+				$('#pav').val( $( this ).data ( 'pav' ));	
+				$( '#veiksmas' ).val ( 'pakeisti' );				
 				dialog.dialog( "open" );	
 			});
 		});
@@ -190,7 +192,7 @@
 			<fieldset>
 				<label for="pav">Maisto medžiagų grupės pavadinimas</label>
 				<input type="text" name="pav" id="pav" value="" class="text ui-widget-content ui-corner-all">
-				<input type="hidden" name="pildyti" value="papildyti">				
+				<input type="hidden" name="veiksmas" id="veiksmas"value="papildyti">				
 				<input type="hidden" name="id" id="id_taisomo_iraso" value="0">				<!-- Allow form submission with keyboard without duplicating the dialog button -->
 				<!-- input type="submit" tabindex="-1" style="position:absolute; top:-1000px" name="pildyti" value="papildyti" -->
 				<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
