--- a/src/main/resources/templates/produktas.html
+++ b/src/main/resources/templates/produktas.html
@@ -160,6 +160,7 @@
 		$( "#create-product" ).button().on( "click", function() {
 		
 			$( '#pav_veiksmo' ).html ( 'Kuriamas naujas įrašas' );
+			$( '#veiksmas' ).val ( 'papildyti' );
 			dialog.dialog( "open" );
 		});
 		$( ".keisti" ).each ( function() {
@@ -170,6 +171,7 @@
 				$( '#id_taisomo_iraso' ).val ( id );
 				$( '#pav_veiksmo' ).html (  'Koreguojamas įrašas' );
 				$('#pav').val( $( this ).data ( 'pav' ));
+				$( '#veiksmas' ).val ( 'pakeisti' );
 				dialog.dialog( "open" );	
 			});
 		});
@@ -202,7 +204,7 @@
 			<fieldset>
 				<label for="pav">Produkto pavadinimas</label>
 				<input type="text" name="pav" id="pav" value="" class="text ui-widget-content ui-corner-all">
-				<input type="hidden" name="pildyti" value="papildyti">
+				<input type="hidden" name="veiksmas" id="veiksmas"value="papildyti">
 				<input type="hidden" name="id" id="id_taisomo_iraso" value="0">				
 				<!-- Allow form submission with keyboard without duplicating the dialog button -->
 				<!-- input type="submit" tabindex="-1" style="position:absolute; top:-1000px" name="pildyti" value="papildyti" -->
