--- a/src/main/resources/templates/produktas1.html
+++ b/src/main/resources/templates/produktas1.html
@@ -51,7 +51,8 @@
 	
 		var dialog, form,
 		pav = $( "#pav" ),
-		allFields = $( [] ).add( pav),
+		kiekis = $("#kiekis")
+		allFields = $( [] ).add( pav ).add( kiekis ),
 		tips = $( ".validateTips" );
 	 
 		function updateTips( t ) {
@@ -159,6 +160,7 @@
 		$( "#create-product" ).button().on( "click", function() {
 		
 			$( '#pav_veiksmo' ).html ( 'Kuriamas naujas įrašas' );
+			$( '#veiksmas' ).val ( 'papildyti' );
 			dialog.dialog( "open" );
 		});
 		$( ".keisti" ).each ( function() {
@@ -168,7 +170,8 @@
 				id = $( this ).data( 'id' );
 				$( '#id_taisomo_iraso' ).val ( id );
 				$( '#pav_veiksmo' ).html (  'Koreguojamas įrašas' );
-				$('#pav').val( $( this ).data ( 'pav' ));			
+				$('#pav').val( $( this ).data ( 'pav' ));		
+				$( '#veiksmas' ).val ( 'pakeisti' );				
 				dialog.dialog( "open" );	
 			});
 		});
@@ -205,8 +208,8 @@
 				</select>
 				<label for="kiekis">Kiekis</label>
 				<input type="number" name="kiekis" id="kiekis" value="0" class="text ui-widget-content ui-corner-all">
-				<input type="hidden" name="pildyti" value="papildyti">
-				<input type="hidden" name="id" id="id_taisomo_iraso" value="0">				
+				<input type="hidden" name="veiksmas" id="veiksmas"value="papildyti">
+				<input type="hidden" name="id_prod_medz" id="id_taisomo_iraso" value="0">				
 				<!-- Allow form submission with keyboard without duplicating the dialog button -->
 				<!-- input type="submit" tabindex="-1" style="position:absolute; top:-1000px" name="pildyti" value="papildyti" -->
 				<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
