--- a/src/main/resources/templates/maisto_medz_grupe.html
+++ b/src/main/resources/templates/maisto_medz_grupe.html
@@ -7,30 +7,9 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
 	<link rel="stylesheet" href="menu.css">
+	<link rel="stylesheet" href="common.css">
 	<style>
-		body {
-			padding: 0px;
-			margin: 0px;
-			text-align: center;
-			width:100%;
-		}
-		label {
-			display: block;
-			width: 100%;
-		}
-		input[type="text"], input.frm_button{
-		
-			width: 200px;
-			margin-right: auto;
-		}
-		input.text { margin-bottom:12px; width:95%; padding: .4em; }
-		fieldset { padding:0; border:0; margin-top:25px; }
-		h1 { font-size: 1.2em; margin: .6em 0; }
-		div#products-contain { width: 350px; margin: 20px 0; }
-		div#products-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
-		div#products-contain table td, div#products-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
-		.ui-dialog .ui-state-error { padding: .3em; }
-		.validateTips { border: 1px solid transparent; padding: 0.3em; }
+	
 	</style>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
