--- a/src/main/resources/templates/produktas.html
+++ b/src/main/resources/templates/produktas.html
@@ -7,42 +7,9 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
 	<link rel="stylesheet" href="menu.css">
+	<link rel="stylesheet" href="common.css">
 	<style>
-		body {
-			padding: 0px;
-			margin: 0px;
-			text-align: center;
-			width:100%;
-		}
-		label {
-			display: block;
-			width: 100%;
-		}
-		input[type="text"], input.frm_button{
-			display: block;
-			width: 200px;
-			margin-right: auto;
-		}
-		input.text { margin-bottom:12px; width:95%; padding: .4em; }
-		fieldset { padding:0; border:0; margin-top:25px; }
-		h1 { font-size: 1.2em; margin: .6em 0; }
-		div#products-contain { width: 350px; margin: 20px 0; }
-		div#products-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
-		div#products-contain table td, div#products-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
-		.ui-dialog .ui-state-error { padding: .3em; }
-		.validateTips { border: 1px solid transparent; padding: 0.3em; }
-		.pranesimas_red {
 		
-			color: red;
-		}
-		.pranesimas_grey {
-		
-			color: lightgrey;		
-		}
-		.pranesimas_green {
-		
-			color: green;		
-		}		
 	</style>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -169,7 +136,7 @@
 			$( this ).on( "click", function() {
 			
 				id = $( this ).data( 'id' );
-				$( '#id_taisomo_iraso' ).val ( id_prod_medz );
+				$( '#id_taisomo_iraso' ).val ( id);
 				$( '#pav_veiksmo' ).html (  'Koreguojamas įrašas' );
 				$('#pav').val( $( this ).data ( 'pav' ));
 				$( '#veiksmas' ).val ( 'pakeisti' );
@@ -182,7 +149,7 @@
 			$( this ).on( "click", function() {
 			
 				id = $( this ).data( 'id' );
-				$( '#id_salinamo_iraso' ).val ( id_prod_medz );
+				$( '#id_salinamo_iraso' ).val ( id );
 				$( '#pav_salinamo_iraso' ).html ( $( this ).data ( 'pav' ) );				
 				trintidialog.dialog( "open" );	
 			});
@@ -207,7 +174,7 @@
 				<label for="pav">Produkto pavadinimas</label>
 				<input type="text" name="pav" id="pav" value="" class="text ui-widget-content ui-corner-all">
 				<input type="hidden" name="veiksmas" id="veiksmas"value="papildyti">
-				<input type="hidden" name="id_prod_medz" id="id_taisomo_iraso" value="0">
+				<input type="hidden" name="id" id="id_taisomo_iraso" value="0">
 				<input type="checkbox" name="check_gyv" id="check_gyv" value="1">
 				<label for="check_gyv"> gyvulines kilmes </label><br>
 				<!-- Allow form submission with keyboard without duplicating the dialog button -->
