--- a/src/main/resources/templates/produktas_medziaga.html
+++ b/src/main/resources/templates/produktas_medziaga.html
@@ -7,30 +7,9 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
 	<link rel="stylesheet" href="menu.css">
+	<link rel="stylesheet" href="common.css">
 	<style>
-		body {
-			padding: 0px;
-			margin: 0px;
-			text-align: center;
-			width:100%;
-		}
-		label {
-			display: block;
-			width: 100%;
-		}
-		input[type="text"], input.frm_button {
 		
-			width: 200px;
-			margin-right: auto;
-		}
-		input.text { margin-bottom:12px; width:95%; padding: .4em; }
-		fieldset { padding:0; border:0; margin-top:25px; }
-		h1 { font-size: 1.2em; margin: .6em 0; }
-		div#products-contain { width: 350px; margin: 20px 0; }
-		div#products-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
-		div#products-contain table td, div#products-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
-		.ui-dialog .ui-state-error { padding: .3em; }
-		.validateTips { border: 1px solid transparent; padding: 0.3em; }
 	</style>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -194,9 +173,9 @@
 		<form id="produkto_forma" method="POST">
 			<fieldset>
 				<label for="id_produkto">ID_produkto</label>
-				<input type="number" name="id_produkto" id="id_produkto" value="" class="text ui-widget-content ui-corner-all">
+				<input type="number" name="id_produkto" id="id_produkto" value="0" class="text ui-widget-content ui-corner-all">
 				<label for="id_medziagos">ID_medžiagos</label>
-				<input type="number" name="id_medziagos" id="id_medziagos" value="" class="text ui-widget-content ui-corner-all">
+				<input type="number" name="id_medziagos" id="id_medziagos" value="0" class="text ui-widget-content ui-corner-all">
 				<label for="kiekis">Kiekis</label>
 				<input type="number" name="kiekis" id="kiekis" value="" class="text ui-widget-content ui-corner-all">
 				<input type="hidden" name="veiksmas" id="veiksmas"value="papildyti">				
@@ -239,7 +218,7 @@
 			<tbody>
 			<tr th:each="produktas_medziaga : ${lst}">
 				<td>
-					<input type="button" class="keisti" value="keisti" th:attr="data-id=${produktas_medziaga.getId()}">
+					<input type="button" class="keisti" value="keisti" th:attr="data-id=${produktas_medziaga.getId()},data-id_produkto=${produktas_medziaga.getProduktai_id()},data-id_medziagos=${produktas_medziaga.getMaistines_medz_id()},data-id_medziagos=${produktas_medziaga.getKiekis()}">
 					<input type="button" class="salinti" value="šalinti" th:attr="data-id=${produktas_medziaga.getId()}">				
 				</td>
 				<td th:text="${produktas_medziaga.getProduktai_id()}"></td>
