--- a/src/main/resources/templates/maistine_medz.html
+++ b/src/main/resources/templates/maistine_medz.html
@@ -7,30 +7,8 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
 	<link rel="stylesheet" href="menu.css">
+	<link rel="stylesheet" href="common.css">
 	<style>
-		body {
-			padding: 0px;
-			margin: 0px;
-			text-align: center;
-			width:100%;
-		}
-		label {
-			display: block;
-			width: 100%;
-		}
-		input[type="text"], input.frm_button{
-		
-			width: 200px;
-			margin-right: auto;
-		}
-		input.text { margin-bottom:12px; width:95%; padding: .4em; }
-		fieldset { padding:0; border:0; margin-top:25px; }
-		h1 { font-size: 1.2em; margin: .6em 0; }
-		div#products-contain { width: 350px; margin: 20px 0; }
-		div#products-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
-		div#products-contain table td, div#products-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
-		.ui-dialog .ui-state-error { padding: .3em; }
-		.validateTips { border: 1px solid transparent; padding: 0.3em; }
 	</style>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -79,8 +57,8 @@
 			var valid = true;
 			 allFields.removeClass( "ui-state-error" );
 			valid = valid && checkLength( pav, "Maistinės medžiagos pavadinimo", 3, 25 );
-			valid = valid && checkLength( id_grupes, "ID_grupės", 1, 16 ); /*
-			valid = valid && checkRegexp( id_produkto, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
+			valid = valid; //&& checkLength( id_grupes, "ID_grupės", 1, 16 ); 
+			/*valid = valid && checkRegexp( id_produkto, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
 			valid = valid && checkRegexp(  id_medziagos, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
 			valid = valid && checkRegexp( kiekis, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
 			*/
@@ -159,6 +137,8 @@
 			$( this ).on( "click", function() {
 			
 				id = $( this ).data( 'id' );
+				pav_grup = $( this ).data( 'pav_grup' );
+				$( '#id_grupes' ).val ( pav_grup );
 				$( '#id_taisomo_iraso' ).val ( id );
 				$( '#pav_veiksmo' ).html (  'Koreguojamas įrašas' );
 				$( '#pav' ).val( $( this ).data ( 'pav' ) );	
@@ -196,8 +176,11 @@
 				<label for="pav">Maistinės medžiagos pavadinimas</label>
 				<input type="text" name="pav" id="pav" value="" class="text ui-widget-content ui-corner-all">
 				<label for="id_grupes">ID_grupės</label>
-				<select name="id_grupes"> 
-					<option th:each="maisto_medz_grupe: ${lst}" th:value="${maisto_medz_grupe.getId()}" th:text="${maisto_medz_grupe.getId_grupes()}">
+				<select id="id_grupes" name="id_grupes"> 
+					<option th:each="maisto_medziagu_grupes : ${maist_medz_grupes}" 
+						th:value="${maisto_medziagu_grupes.getId()}" 
+						th:text="${maisto_medziagu_grupes.getPav()}"
+						th:selected="${maisto_medziagu_grupes.getId()}==${id_grupes}">
 					</option>
 				</select>
 				<input type="hidden" name="veiksmas" id="veiksmas" value="papildyti">				
@@ -236,11 +219,11 @@
 			<tbody>
 			<tr th:each="maistine_medz : ${lst}">
 				<td>
-					<input type="button" class="keisti" value="keisti" th:attr="data-id=${maistine_medz.getId()},data-pav=${maistine_medz.getPav()}">
+					<input type="button" class="keisti" value="keisti" th:attr="data-id=${maistine_medz.getId()},data-pav=${maistine_medz.getPav()},data-pav_grup=${maistine_medz.maisto_medz_grupes().getPav()}">
 					<input type="button" class="salinti" value="šalinti" th:attr="data-id=${maistine_medz.getId()},data-pav=${maistine_medz.getPav()}">				
 				</td>
 				<td th:text="${maistine_medz.getPav()}"></td>
-				<td th:text="${maistine_medz.getId_grupes()}"></td>
+				<td th:text="${maistine_medz.maisto_medz_grupes().getPav()}"></td>
 			</tr>
 			</tbody>
 		</table>
