--- a/src/main/resources/templates/maisto_medz_grupe.html
+++ b/src/main/resources/templates/maisto_medz_grupe.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Produktai medziagos</title>
+	<title>Maisto medžiagų grupės</title>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
 	<link rel="stylesheet" href="menu.css">
