--- a/src/main/resources/templates/produktas_medziaga.html
+++ b/src/main/resources/templates/produktas_medziaga.html
@@ -19,8 +19,10 @@
 		var dialog, form,
 		id_produkto = $( "#id_produkto" ),
 		id_medziagos = $( "#id_medziagos" ),
+		pav_produkto = $( "#pav_produkto" ),
+		pav_medziagos = $( "#pav_medziagos" ),
 		kiekis = $( "#kiekis" ),
-		allFields = $( [] ).add( id_produkto ).add( id_medziagos ).add( kiekis );
+		allFields = $( [] ).add( id_produkto ).add( id_medziagos ).add( pav_produkto ).add( pav_medziagos ).add( kiekis );
 		tips = $( ".validateTips" );
 	 
 		//isveda pranesima apie nepavykusia validacija
@@ -44,6 +46,17 @@
 		      }
 		}
 	 
+		function checkNumber( o, n, min, max ) {
+			if ( parseInt ( o.val() ) > max || parseInt ( o.val() ) < min ) {
+				o.addClass( "ui-state-error" );
+				updateTips( n +  " reikšmė turi būti tarp " +
+				  min + " ir " + max + "." );
+				return false;
+			} else {
+				return true;
+		      }
+		}	 
+	 
 		function checkRegexp( o, regexp, n ) {
 			if ( !( regexp.test( o.val() ) ) ) {
 				o.addClass( "ui-state-error" );
@@ -56,14 +69,15 @@
 	 
 		function addProduct() {
 			var valid = true;
-			 allFields.removeClass( "ui-state-error" );
-			valid = valid && checkLength( id_produkto, "ID_produkto", 1, 1000 );
-			valid = valid && checkLength( id_medziagos, "ID_medžiagos", 1, 1000 );
-			valid = valid && checkLength( kiekis, "Kiekis", 1, 1000 ); /*
-			valid = valid && checkRegexp( id_produkto, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
-			valid = valid && checkRegexp(  id_medziagos, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
-			valid = valid && checkRegexp( kiekis, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
-			*/
+			allFields.removeClass( "ui-state-error" );
+			console.log( pav_produkto );
+			valid = valid && checkLength( pav_produkto, "Produkto pavadinimo ", 1, 30 );
+			valid = valid && checkLength( pav_medziagos, "Medžiagos pavadinimo", 1, 30 );
+			valid = valid && checkNumber( kiekis, "Kiekio", 0, 1000 ); 
+			//valid = valid && checkRegexp( pav_produkto, /Text, "Produkto pavadinimas turi buti sudarytas iš lotyniskų raidžių ir _ vietoje tarpo. Minimalus raidžių kiekis 1, maksimalus 30." );
+			//valid = valid && checkRegexp(  pav_medziagos, /Text, "Medžiagos pavadinimas turi buti sudarytas iš lotyniskų raidžių ir _ vietoje tarpo. Minimalus raidžių kiekis 1, maksimalus 30." );
+			//valid = valid && checkRegexp( kiekis, /Number, "Kiekis turi būti sudarytas iš arabiškų skaičių 0-9 ir kablelio . Minimali kiekio reikšmė 0, maksimali 1000." );
+			
 			if ( valid ) {
 				/*
 				$( "#products tbody" ).append( "<tr>" +
@@ -131,6 +145,7 @@
 		
 			$( '#pav_veiksmo' ).html ( 'Kuriamas naujas įrašas' );
 			$( '#veiksmas' ).val ( 'papildyti' );
+
 			dialog.dialog( "open" );
 		});
 		$( ".keisti" ).each ( function() {
@@ -139,14 +154,17 @@
 			
 				id = $( this ).data( 'id' );
 				$( '#id_taisomo_iraso' ).val ( id );
-				id_produkto = $( this ).data( 'id_produkto' );
-				$('#id_produkto').val (id_produkto);
-				id_medziagos = $( this ).data( 'id_medziagos' );
-				$('#id_medziagos').val(id_medziagos);
-				kiekis = $( this ).data( 'kiekis' );
-				$('#kiekis').val(kiekis);
+				id_produkto_val = $( this ).data( 'id_produkto' );
+				$('#id_produkto').val (id_produkto_val);
+				id_medziagos_val = $( this ).data( 'id_medziagos' );
+				$('#id_medziagos').val(id_medziagos_val);
+				pav_produkto_val = $( this ).data( 'pav_produkto' );
+				$('#pav_produkto').val (pav_produkto_val);
+				pav_medziagos_val = $( this ).data( 'pav_medziagos' );
+				$('#pav_medziagos').val(pav_medziagos_val);				
+				kiekis_val = $( this ).data( 'kiekis' );
+				$('#kiekis').val(kiekis_val);
 				$( '#pav_veiksmo' ).html (  'Koreguojamas įrašas' );
-				$('#pav').val( $( this ).data ( 'pav' ));	
 				$( '#veiksmas' ).val ( 'pakeisti' );				
 				dialog.dialog( "open" );	
 			});
@@ -169,7 +187,7 @@
 	<div id="menu">
 		<ul id="menu_sarasas">
 			<li id="menu_punktas" th:each="menu_item : ${lst_menu}">
-				<a th:href="${menu_item.itemurl()}" th:text="${menu_item.naujasPavadinimas()}"></a>
+				<a th:href="${menu_item.itemurl()}" th:text="${menu_item.naujasPavadinimas()}" th:attr="class=${menu_item.itemurl()}=='/produktai_medziagos' ? 'active' : 'zzz'"></a>
 			</li>
 		</ul>
 	</div>
@@ -178,14 +196,16 @@
 		<p id="pav_veiksmo"></p>
 		<form id="produkto_forma" method="POST">
 			<fieldset>
-				<label for="id_produkto">ID_produkto</label>
-				<input type="number" name="id_produkto" id="id_produkto" value="0" class="text ui-widget-content ui-corner-all">
-				<label for="id_medziagos">ID_medžiagos</label>
-				<input type="number" name="id_medziagos" id="id_medziagos" value="0" class="text ui-widget-content ui-corner-all">
+				<label for="pav_produkto">Produkto pavadinimas</label>
+				<input type="text" name="pav_produkto" id="pav_produkto" value="0" class="text ui-widget-content ui-corner-all">
+				<label for="pav_medziagos">Medžiagos pavadinimas</label>
+				<input type="text" name="pav_medziagos" id="pav_medziagos" value="0" class="text ui-widget-content ui-corner-all">
 				<label for="kiekis">Kiekis</label>
 				<input type="number" name="kiekis" id="kiekis" value="0" class="text ui-widget-content ui-corner-all">
 				<input type="hidden" name="veiksmas" id="veiksmas"value="papildyti">				
-				<input type="hidden" name="id" id="id_taisomo_iraso" value="0">				
+				<input type="hidden" name="id" id="id_taisomo_iraso" value="0">
+				<input type="hidden" name="id_produkto" id="id_produkto" value="0">
+				<input type="hidden" name="id_medziagos" id="id_medziagos" value="0">				
 				<!-- Allow form submission with keyboard without duplicating the dialog button -->
 				<!-- input type="submit" tabindex="-1" style="position:absolute; top:-1000px" name="pildyti" value="papildyti" -->
 				<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
@@ -224,7 +244,11 @@
 			<tbody>
 			<tr th:each="produktas_medziaga : ${lst}">
 				<td>
-					<input type="button" class="keisti" value="keisti" th:attr="data-id=${produktas_medziaga.getId()},data-id_produkto=${produktas_medziaga.getProduktai_id()},data-id_medziagos=${produktas_medziaga.getMaistines_medz_id()},data-id_kiekis=${produktas_medziaga.getKiekis()}">
+					<input type="button" class="keisti" value="keisti" th:attr="data-id=${produktas_medziaga.getId()}
+					,data-pav_produkto=${produktas_medziaga.getProduktai().getPav()}
+					,data-pav_medziagos=${produktas_medziaga.getMaistines_medz().getPav()}
+					,data-kiekis=${produktas_medziaga.getKiekis()},data-id_produkto=${produktas_medziaga.getProduktai_id()}
+					,data-id_medziagos=${produktas_medziaga.getMaistines_medz_id()}">
 					<input type="button" class="salinti" value="šalinti" th:attr="data-id=${produktas_medziaga.getId()}">				
 				</td>
 				<td th:text="${produktas_medziaga.getProduktai().getPav()}"></td>
